--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,9 @@ git:
         
 before_install:
     # Use sed to replace the SSH URL with the public URL if .gitmodules exists
-    - test -e ".gitmodules" && sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+    # test -e ".gitmodules" && sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
     # update the submodule in repo by manual
-    - git submodule update --init --recursive
+    # git submodule update --init --recursive
     - export TZ='Asia/Shanghai'
     - npm install hexo-cli -g
     - chmod +x ./publish-to-gh-pages.sh
